--- a/Clean-Reader/Pages/TopicPage.xaml
+++ b/Clean-Reader/Pages/TopicPage.xaml
@@ -1,6 +1,6 @@
 ﻿<ui:RichasyPage
     xmlns:ui="using:Richasy.Controls.UWP.Models.UI"
-    x:Class="Clean_Reader.Pages.StorePage"
+    x:Class="Clean_Reader.Pages.TopicPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Clean_Reader.Pages"
