--- a/Clean-Reader/Theme/Dark.xaml
+++ b/Clean-Reader/Theme/Dark.xaml
@@ -5,6 +5,7 @@
     <AcrylicBrush x:Key="SideBackground" BackgroundSource="HostBackdrop" TintColor="#252a40" FallbackColor="#282828" TintOpacity="0.7"/>
     <AcrylicBrush x:Key="PaneBackground" BackgroundSource="Backdrop" TintColor="#252a40" FallbackColor="#282828" TintOpacity="0.9"/>
     <AcrylicBrush x:Key="PopupBackground" BackgroundSource="Backdrop" TintColor="#252a40" FallbackColor="#1C1C1C" TintOpacity="0.8"/>
+    <AcrylicBrush x:Key="CoverBackground" BackgroundSource="Backdrop" TintColor="#252a40" FallbackColor="#1C1C1C" TintOpacity="0.6"/>
     <SolidColorBrush x:Key="MaskBackground" Color="#282828" Opacity="0.6"/>
     <AcrylicBrush x:Key="PageBackground" BackgroundSource="HostBackdrop" TintColor="#252a40" FallbackColor="#282828" TintOpacity="0.7"/>
     <SolidColorBrush x:Key="PageOverBackground" Color="#0D0D0D"/>
@@ -50,4 +51,18 @@
     <SolidColorBrush x:Key="ErrorColorOver" Color="#E32528"/>
 
     <SolidColorBrush x:Key="ExpandColor" Color="#F0F0F8"/>
+
+    <SolidColorBrush x:Key="CoverMaskColor" Color="#202020" Opacity="0.3"/>
+    <LinearGradientBrush x:Key="TxtColor" StartPoint="0,0" EndPoint="1,1">
+        <GradientStopCollection>
+            <GradientStop Color="#5AECEC" Offset="0"/>
+            <GradientStop Color="#38B1DD" Offset="1"/>
+        </GradientStopCollection>
+    </LinearGradientBrush>
+    <LinearGradientBrush x:Key="EpubColor" StartPoint="0,0" EndPoint="1,1">
+        <GradientStopCollection>
+            <GradientStop Color="#F0E130" Offset="0"/>
+            <GradientStop Color="#F8AC56" Offset="1"/>
+        </GradientStopCollection>
+    </LinearGradientBrush>
 </ResourceDictionary>
