--- a/Clean-Reader/Pages/ShelfPage.xaml
+++ b/Clean-Reader/Pages/ShelfPage.xaml
@@ -19,7 +19,7 @@
                 </Grid.RowDefinitions>
                 <components:BookCover Data="{x:Bind}"/>
                 <TextBlock Text="{x:Bind Name}" MaxWidth="150" Style="{StaticResource BodyTextStyle}"
-                           Foreground="{ThemeResource ImportantTextColor}" FontWeight="SemiBold"
+                           Foreground="{ThemeResource ImportantTextColor}"
                            MaxLines="1" Grid.Row="1" Margin="0,10,0,5" TextAlignment="Center"/>
                 <TextBlock Text="{x:Bind Type}" Grid.Row="2" Style="{StaticResource SmallTextStyle}"
                            TextAlignment="Center"/>
@@ -35,8 +35,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            
-            <Grid>
+
+            <Grid x:Name="LastestContainer" Margin="0,0,0,35">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -46,17 +46,17 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Style="{StaticResource SubtitleTextStyle}" VerticalAlignment="Center" x:Uid="Control_LastestReadTipBlock"
-                           HorizontalAlignment="Left"/>
-                <ListView Grid.Row="1" Grid.ColumnSpan="2" ItemTemplate="{StaticResource BookItemTemplate}"
-                          x:Name="LastestReadListView" IsItemClickEnabled="True" ItemsSource="{x:Bind vm.LastestReadCollection}"
-                          Style="{StaticResource BasicListView}" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                           HorizontalAlignment="Left" Margin="0,0,0,20"/>
+                <ListView Grid.Row="1" Grid.ColumnSpan="2" ItemTemplate="{StaticResource BookItemTemplate}" ItemClick="BookView_ItemClick"
+                          x:Name="LastestReadListView" IsItemClickEnabled="True" ItemsSource="{x:Bind vm.LastestReadCollection}" Padding="-5,0,0,0"
+                          Style="{StaticResource BasicListView}" ScrollViewer.HorizontalScrollBarVisibility="Hidden" HorizontalAlignment="Left"
                           ScrollViewer.VerticalScrollMode="Disabled" ItemContainerStyle="{StaticResource TransparentListViewContainerStyle}"/>
             </Grid>
             
-            <Grid Grid.Row="1" Margin="0,35,0,0">
+            <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -71,11 +71,24 @@
                     </interaction:ActionButton.Icon>
                 </interaction:ActionButton>
 
-                <GridView Grid.Row="1" Grid.ColumnSpan="2"
-                          x:Name="ShelfBookGridView" IsItemClickEnabled="True" ItemsSource="{x:Bind vm.DisplayBookCollection}"
+                <Grid Grid.Row="1" Grid.ColumnSpan="2">
+                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center"
+                                Margin="0,35,0,0" x:Name="NoDataContainer">
+                        <uwp:FeatherIcon FontSize="100" Opacity="0.6"
+                                         Symbol="BookOpen" HorizontalAlignment="Center"
+                                         Foreground="{ThemeResource TipTextColor}"/>
+                        <TextBlock MaxWidth="300" TextAlignment="Center" HorizontalAlignment="Center" Foreground="{ThemeResource NormalTextColor}"
+                                   Margin="0,20,0,0" x:Uid="Control_NeedOpenBookTipBlock" Style="{StaticResource SubtitleTextStyle}" TextWrapping="Wrap"
+                                   LineHeight="35"/>
+                        <interaction:ExtraButton Style="{StaticResource PrimaryExtraButtonStyle}" x:Uid="Control_ImportBookButton"
+                                                 Margin="0,20,0,0" HorizontalAlignment="Center" x:Name="ImportButton" Click="ImportButton_Click"/>
+                    </StackPanel>
+                    <GridView x:Name="ShelfBookGridView" IsItemClickEnabled="True" ItemsSource="{x:Bind vm.DisplayBookCollection}"
                           Style="{StaticResource NoScrollGridView}" ScrollViewer.VerticalScrollBarVisibility="Hidden"
                           ItemContainerStyle="{StaticResource TransparentGridViewItemContainerStyle}"
-                          ItemTemplate="{StaticResource BookItemTemplate}"/>
+                          ItemTemplate="{StaticResource BookItemTemplate}" ItemClick="BookView_ItemClick"/>
+                </Grid>
+                
             </Grid>
             
         </Grid>
